<resources>
    <string name="app_name">CairoMall</string>
    <string name="Cart_item">Cart</string>
    <string name="Categories_item">Categories</string>
    <string name="about_us_item">About Us</string>
    <string name="licenses_item">licenses</string>
    <string name="terms_item">terms</string>
    <string name="nav_close_drawer">close drawer</string>
    <string name="nav_open_drawer">open drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search_Item">search</string>
    <string name="home_item">home</string>
    <string name="item_name">name</string>
    <string name="item_price">16$</string>
    <string name="description">write item description here</string>
    <string name="reviews">Reivews: </string>
    <string name="add_review">(add review here)</string>
    <string name="username">username</string>
    <string name="review_text">review text</string>
    <string name="review_title">You are reviewing</string>
    <string name="review_userName">Your Name Here</string>
    <string name="DIALOG_REVIEW_BUTTON">add</string>
    <string name="DIALOG_REVIEW_TEXT">Your Reivew</string>
    <string name="review_title_item_name">Item Name</string>
    <string name="search_hint">Search </string>
    <string name="Search_Activity_first_Category">first category</string>
    <string name="Search_Activity_second_Category">second category</string>
    <string name="Search_Activity_third_Category">third_category</string>
    <string name="Search_Activity_all_Categories">See All Categories</string>
    <string name="Search_Activity_fourth_Category">fourth_cat</string>
    <string name="First_Fragmet_Cart_items">Your Cart Items</string>
    <string name="First_Fragment_sum">Sum:55$ </string>
    <string name="First_Fragment_price">55$</string>
    <string name="First_Fragment_btn_next">next</string>
    <string name="First_Fragment_cart_empty_tv">Your cart is empty</string>
    <string name="cart_item_name">item name</string>
    <string name="Second_Fragment_tvAddress">Address:</string>
    <string name="hint_address">address</string>
    <string name="zip_code">Zip code:</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="phone_number">Phone Number:</string>
    <string name="Second_Fragment_btn_next">Next</string>
    <string name="Second_Fragment_btn_back">Back</string>
    <string name="Third_Fragment_names">names</string>
    <string name="Third_Fragment_total_price">total price</string>
    <string name="Third_Fragment_price">price</string>
    <string name="Third_Fragment_address">address :</string>
    <string name="Third_Fragment_user_address">address</string>
    <string name="Third_Fragment_phone_number">phone number:</string>
    <string name="Third_Fragment_payment_description">select payment method:</string>
    <string name="Third_Fragment_credit_card">Credit Card</string>
    <string name="Third_Fragment_paypal">PayPal</string>
    <string name="Third_Fragment_items">Items:</string>
    <string name="Third_Fragment_tvPhoneNumber">Phone number</string>
    <string name="Third_Fragment_btnBack">BACK</string>
    <string name="Third_Fragment_btnCheckout">Checkout</string>
</resources>