<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ThirdCartFragment"
    android:padding="25dp"
    android:background="@color/DarkBlue"
    >
    <LinearLayout
        android:id="@+id/Third_Fragment_itemsNamesLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_items"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/Third_Fragment_itemsNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_names"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Third_Fragment_priceLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Third_Fragment_itemsNamesLinearLayout"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_total_price"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/Third_Fragment_tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_price"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Third_Fragment_addressLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Third_Fragment_priceLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_address"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/Third_Fragment_tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_user_address"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Third_Fragment_phoneLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Third_Fragment_addressLinearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_phone_number"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_tvPhoneNumber"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/Third_Fragment_payment_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Third_Fragment_payment_description"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Third_Fragment_phoneLinearLayout"
        android:textColor="@color/white"
        />

    <RadioGroup
        android:id="@+id/Third_Fragment_rgPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Third_Fragment_payment_description"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        >

        <RadioButton
            android:id="@+id/Third_Fragment_rbCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Third_Fragment_credit_card"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/Third_Fragment_rbPayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/Third_Fragment_paypal"
            android:textColor="@color/white"
            />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Third_Fragment_rgPaymentMethod"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/Third_Fragment_btnBack"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_btnBack"

            />
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/Third_Fragment_btnCheckout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Third_Fragment_btnCheckout" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>