<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/Dialog_Review_description"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_title_item_name"
        app:layout_constraintStart_toEndOf="@id/Dialog_Review_description"
        app:layout_constraintTop_toTopOf="@id/Dialog_Review_description"
        android:layout_marginStart="5dp"
        android:id="@+id/Dialog_Review_itemName"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/review_userName"
        android:id="@+id/Dialog_Review_userName"
        app:layout_constraintTop_toBottomOf="@id/Dialog_Review_description"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/DIALOG_REVIEW_TEXT"
        app:layout_constraintTop_toBottomOf="@id/Dialog_Review_userName"
        android:id="@+id/Dialog_Review_reviewText"
        android:layout_marginTop="10dp"
        android:lines="5"
        android:gravity="start"
        />
    <Button
        android:id="@+id/Dialog_Review_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DIALOG_REVIEW_BUTTON"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Dialog_Review_reviewText"
        android:layout_marginTop="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>