<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FirstCartFragment"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_Fragmet_Cart_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/First_Fragment_title"
        android:textColor="@color/white"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/First_Fragment_title"
        android:id="@+id/First_Fragment_recView"
        android:layout_marginTop="10dp"

        />

    <TextView
        android:id="@+id/First_Fragment_sum_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_Fragment_sum"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/First_Fragment_recView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_Fragment_btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/First_Fragment_sum_tv"
        app:layout_constraintVertical_bias="0.571"
        android:id="@+id/First_Fragment_btn_next"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_Fragment_cart_empty_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="italic|bold"
        android:textSize="16dp"
        android:visibility="gone"
        android:id="@+id/First_Fragment_warning_tv"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>