<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GroceryItemActivity"
    android:background="@color/DarkBlue"
    >
    <include layout="@layout/toolbar_layout"
        android:id="@+id/Grocery_Item_Activity_Toolbar"
        />

    <Button
        android:id="@+id/Grocery_item_Add_to_Cart_Buttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="ADD to Cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_Item_Activity_Toolbar"

        android:textAllCaps="false"

        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/Grocery_item_Add_to_Cart_Buttn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/Grocery_Item_Scroll_View"
        android:padding="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/Grocery_Item_Activity_name_and_price"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/item_name"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/Grocery_Item_Activity_name"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/item_price"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/Grocery_Item_Activity_price"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ImageView
                android:layout_width="350dp"
                android:layout_height="350dp"
                app:layout_constraintTop_toBottomOf="@id/Grocery_Item_Activity_name_and_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@mipmap/ic_launcher_round"
                android:id="@+id/Grocery_Item_Activity_img"
                android:layout_marginTop="10dp"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:isIndicator="false"
                android:numStars="5"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/Yellow"
                android:rating="0"
                style="?android:attr/ratingBarStyleSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Grocery_Item_Activity_img"
                android:id="@+id/Grocery_Item_Activity_ratingBar"
                android:stepSize="0.5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Grocery_Item_Activity_ratingBar"
                android:text="@string/description"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textStyle="italic"
                android:id="@+id/Grocery_Item_Activity_description"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Grocery_Item_Activity_description"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/reviews"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:id="@+id/Grocery_Item_Activity_reviews"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Grocery_Item_Activity_description"
                app:layout_constraintStart_toEndOf="@id/Grocery_Item_Activity_reviews"
                android:text="@string/add_review"
                android:textColor="@color/Yellow"
                android:layout_marginTop="10dp"
                android:id="@+id/Grocery_Item_Activity_add_Review"
                android:textStyle="italic"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/Grocery_Item_Activity_add_Review"
                android:id="@+id/Grocery_Item_Activity_review_RecView"
                android:layout_marginTop="10dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

